# visuomotor_verification

./: CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: collect_trajectories.yaml  evaluate_verifier.yaml  train_policy.yaml  train_verifier.yaml
configs/policy/: diffusion_policy.yaml
configs/run/: deterministic.yaml  mixed.yaml  stochastic.yaml
configs/simulator/: maniskill.yaml
configs/storage/: default.yaml
configs/task/: push_t.yaml
configs/verifier/: placeholder.yaml
docs/superpowers/plans/: 2026-05-11-dp-adapter.md  2026-05-11-foundations.md
docs/superpowers/specs/: 2026-05-11-dp-adapter-design.md  2026-05-11-foundations-design.md
scripts/: _common.py  collect_trajectories.py  evaluate_verifier.py  train_policy.py  train_verifier.py
src/visuomotor_verification/core/: determinism.py  git_info.py  storage.py  trajectory.py  types.py
src/visuomotor_verification/policy/: base.py
src/visuomotor_verification/policy/diffusion_policy/: UPSTREAM.md  __init__.py  _vendor_import.py  adapter.py  trainer.py
src/visuomotor_verification/simulator/: base.py  maniskill.py
src/visuomotor_verification/task/: base.py  push_t.py
src/visuomotor_verification/verifier/: base.py
tests/: conftest.py  test_abcs.py  test_determinism.py  test_dp_adapter.py  test_dp_agent_override.py  test_dp_trainer_step.py  test_git_info.py  test_maniskill_simulator.py  test_push_t_task.py  test_smoke_maniskill.py  test_smoke_scripts.py  test_smoke_train_policy.py  test_storage.py  test_trajectory.py  test_vendor_import.py
